bynkc/tests/fixtures/positive/57_fragment_form_commons/input.karn
commons fragment.demo

type Metres = Int where NonNegative

fn double(n: Int) -> Int {
  n * 2
}
