bynkc/tests/fixtures/negative/45_opaque_construct_direct/input.karn
commons opacity.bad {
  type Timestamp = opaque Int

  fn Timestamp.fromMillis(n: Int) -> Timestamp {
    Timestamp { value: n }
  }
}
